# Plugin_Shaders

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
examples/: standalone.rs
src/: ai_tools.rs  lib.rs
src/core/: definitions.rs  events.rs  graph.rs  graph_entity.rs  mod.rs  serialization.rs  types.rs
src/editor/: entity_ops.rs  mod.rs  panel.rs  panel_render.rs  tabs.rs  toolbar.rs  undo_ops.rs  workspace.rs  workspace_panels.rs
src/features/: mod.rs
src/features/clipboard/: mod.rs
src/features/comments/: operations.rs
src/features/compilation/: compiler.rs  conversion.rs  mod.rs  panel.rs
src/features/connections/: compatibility.rs  mod.rs  operations.rs
src/features/nodes/: mod.rs  operations.rs  selection.rs
src/features/preview/: camera.rs  mesh.rs  mod.rs  panel.rs  renderer.rs
src/features/shader_model/: mod.rs  standard.rs
src/features/undo/: mod.rs
src/features/viewport/: coordinates.rs  mod.rs  operations.rs
src/io/: formats.rs  legacy.rs  mod.rs  save_load.rs
src/rendering/: graph.rs  input.rs  layout.rs  mod.rs  overlay.rs  style.rs
src/rendering/gpu/: mod.rs  pin_preview.rs  renderer.rs  text.rs  types.rs
src/rendering/gpu/shaders/: bezier.wgsl  comments.wgsl  grid.wgsl  nodes.wgsl  pins.wgsl  text.wgsl  texture_previews.wgsl  wires.wgsl
src/ui_components/: mod.rs  node_library.rs  palette_view.rs  properties.rs
